--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/mohave": "^4.5.0",
     "@fontsource/oswald": "^4.5.1",
     "@fontsource/roboto": "^4.5.1",
+    "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
