--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/merriweather": "^4.5.1",
     "@fontsource/mohave": "^4.5.0",
     "@fontsource/oswald": "^4.5.1",
     "@fontsource/roboto": "^4.5.1",
+    "@fontsource/roboto-condensed": "^4.5.0",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.0",
     "@reduxjs/toolkit": "^1.6.2",
@@ -19,6 +21,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
