--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.4.0",
     "web-vitals": "^1.0.1"
   },
