getting there on talking feature.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.3",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.4.0",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
